Bring back the Preview button which is visible only when you're in the Markdown mode anyway and it's useful to workaround some issues.

--- a/src/github-writer.css
+++ b/src/github-writer.css
@@ -235,11 +235,6 @@ form[data-github-writer-id]:not(.github-writer-type-code) nav.tabnav-tabs {
 	Code editor specific stuff
 ***********************************/
 
-/* Hide the preview tab */
-.github-writer-type-code.github-writer-mode-rte .preview.tabnav-tab {
-	display: none;
-}
-
 /* Hide the file actions */
 .github-writer-type-code.github-writer-mode-rte .file-actions {
 	display: none !important;
